@@ -37,8 +37,15 @@
 3. 配置文件备份功能, 本地备份
 
 # 项目打包
+
 目前可以打包成jar包使用了, 启动时需要使用如下命令:
+
+java [vm启动参数] -jar 文件名.jar
+
+(vm启动参数: --module-path "JavaFx SDK的lib目录" --add-modules javafx.controls,javafx.fxml)
+
 ```shell
 java --module-path "E:\produce\javafx-sdk-20\lib" --add-modules javafx.controls,javafx.fxml -jar front.jar
 ```
+
 后面试试打成exe包
